--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@aws-amplify/cli": "^4.47.1",
     "@quasar/extras": "^1.10.2",
+    "aws-amplify": "^3.3.26",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "quasar": "^2.0.0-beta.11"
