--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "devDependencies": {
     "@quasar/app": "^3.0.0-beta.10",
+    "@vue/devtools": "^6.0.0-beta.6",
     "babel-eslint": "^10.0.1",
+    "electron": "^12.0.4",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-vue": "^7.0.0",
