Let's see what happens

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,56 +1,69 @@
 {
-    "function": {
-        "resolvecors": {
-            "build": true,
-            "providerPlugin": "awscloudformation",
-            "service": "Lambda",
-            "dependsOn": [
-                {
-                    "category": "function",
-                    "resourceName": "axioslayer",
-                    "attributes": [
-                        "Arn"
-                    ]
-                }
-            ]
-        },
-        "axioslayer": {
-            "runtimes": [
-                {
-                    "value": "nodejs",
-                    "name": "NodeJS",
-                    "layerExecutablePath": "nodejs\\node_modules",
-                    "cloudTemplateValue": "nodejs12.x"
-                }
-            ],
-            "layerVersionMap": {
-                "1": {
-                    "permissions": [
-                        {
-                            "type": "private"
-                        }
-                    ]
-                }
-            },
-            "providerPlugin": "awscloudformation",
-            "service": "LambdaLayer",
-            "build": true
-        }
-    },
-    "api": {
-        "corsapi": {
-            "service": "API Gateway",
-            "providerPlugin": "awscloudformation",
-            "dependsOn": [
-                {
-                    "category": "function",
-                    "resourceName": "resolvecors",
-                    "attributes": [
-                        "Name",
-                        "Arn"
-                    ]
-                }
-            ]
-        }
-    }
+	"function": {
+		"resolvecors": {
+			"build": true,
+			"providerPlugin": "awscloudformation",
+			"service": "Lambda",
+			"dependsOn": [
+				{
+					"category": "function",
+					"resourceName": "axioslayer",
+					"attributes": [
+						"Arn"
+					]
+				}
+			]
+		},
+		"axioslayer": {
+			"runtimes": [
+				{
+					"value": "nodejs",
+					"name": "NodeJS",
+					"layerExecutablePath": "nodejs\\node_modules",
+					"cloudTemplateValue": "nodejs12.x"
+				}
+			],
+			"layerVersionMap": {
+				"1": {
+					"permissions": [
+						{
+							"type": "private"
+						}
+					]
+				}
+			},
+			"providerPlugin": "awscloudformation",
+			"service": "LambdaLayer",
+			"build": true
+		}
+	},
+	"api": {
+		"corsapi": {
+			"service": "API Gateway",
+			"providerPlugin": "awscloudformation",
+			"dependsOn": [
+				{
+					"category": "function",
+					"resourceName": "resolvecors",
+					"attributes": [
+						"Name",
+						"Arn"
+					]
+				}
+			]
+		}
+	},
+	"auth": {
+		"groupsubpaydaab1a21": {
+			"service": "Cognito",
+			"providerPlugin": "awscloudformation",
+			"dependsOn": []
+		}
+	},
+	"storage": {
+		"subpaystorage": {
+			"service": "S3",
+			"providerPlugin": "awscloudformation"
+		}
+	}
 }
